# c-primer-learn

./: CMakeLists.txt  main.cpp
1/: Book_shop.cpp  Sales_item_io.cpp  Sales_item_io.h  add_item.cpp  e1_23.cpp
1/data/: add_item
2/: arithmetic_type.cpp  escape_sequence.cpp  pointer.cpp  variable.cpp
