cmake_minimum_required(VERSION 3.15)
project(c___primer_learn)

set(CMAKE_CXX_STANDARD 14)
#add_executable(c___primer_learn main.cpp)
# 1
#add_executable(c___primer_learn 1/Sales_item_io.cpp 1/Sales_item_io.h)
#add_executable(c___primer_learn 1/add_item.cpp 1/Sales_item_io.h)
#add_executable(c___primer_learn 1/e1_23.cpp 1/Sales_item_io.h)
#add_executable(c___primer_learn 1/Book_shop.cpp 1/Sales_item_io.h)
# 2
#add_executable(c___primer_learn 2/arithmetic_type.cpp)
#add_executable(c___primer_learn 2/escape_sequence.cpp)
#add_executable(c___primer_learn 2/variable.cpp)
add_executable(c___primer_learn 2/pointer.cpp)
